testsuite/tests/parser/should_fail/T13600.stderr

T13600.hs:5:1: error:
    Illegal bang-pattern (use BangPatterns):
    f1 ! x
